src/seqvars/query/snapshots/varfish_server_worker__seqvars__query__schema__test__sequence_variant_from_vcf-7.snap
---
source: src/seqvars/query/schema.rs
expression: "&seqvar"
---
chrom: "17"
pos: 41252697
reference: A
alternative: AT
gnomad_exomes_an: 0
gnomad_exomes_hom: 0
gnomad_exomes_het: 0
gnomad_exomes_hemi: 0
gnomad_genomes_an: 0
gnomad_genomes_hom: 0
gnomad_genomes_het: 0
gnomad_genomes_hemi: 0
helix_an: 0
helix_hom: 0
helix_het: 0
inhouse_an: 0
inhouse_hom: 0
inhouse_het: 0
inhouse_hemi: 0
call_info:
  Case_1_father-N1-DNA1-WGS1:
    genotype: 1/1
    quality: ~
    dp: 45
    ad: 45
    phasing_id: ~
  Case_1_index-N1-DNA1-WGS1:
    genotype: 1/0
    quality: ~
    dp: 33
    ad: 17
    phasing_id: ~
  Case_1_mother-N1-DNA1-WGS1:
    genotype: 1/0
    quality: ~
    dp: 33
    ad: 11
    phasing_id: ~

